# tool_misc

./: .gitignore  Linux下使用automake、autoconf生成configure文件.md  Makefile  README.md  a.html  conf.py  from svg_to_gcode.svg_parser import pars.md  index.rst  make.bat  misc.md  private.md  tmp.md
MISC/: CS和BS架构.md  Gif工具.md  howToLearnGithubProject.md  learningServer.md  photoshop.md  开发流程.md  项目设计.md
NEW/: 0210~0215一周总结.txt.md  CEO.md  ChromiumEmbeddedFramework.md  LAMP.md  NIST.md  blockchain.md  diskgenius.md  example.nsi  execProg.json  execProg2.json  execProgParse.json  latex.md  nsis.md  openstack.md  ping.md  powershell远程.md  scrapy.tox.ini  todo.md  vocabulary.md  关于工具类前端项目的思考.md  基于token的多平台身份认证架构设计.md  通信协议之序列化----TLV详解.md
android/: android模拟器.md  apk.md
arch/: 架构设计流程.md
arith/: ACMer必备知识.md  a.py  arith.md  eggDrop.md  misc.md  readme.md  算法简介.md
business/: bi_ba.md  cms.md  erp_oa_cms.md  index.rst
cpp/: eMisc.md
cxx/: readme.md
githubs/: record.md
greensoftware/: eOswalk.py  fOswalkDir.py  fileFindWord.bat  mFileFindWord.py  mFileReplaceWord.py  pathReplaceWord.bat  vscode.bat
hardware/: cpu_gpu_SOC.md  mips  readme.md
ide/: gcc.md  msvcTools.md
industry/: 2023年最新国产芯片生态图谱（附80+类国产名录）.md  硬件明明比软件更难，国内的硬件技术也不如软件，为什么硬件工程师待遇还不如软件？.md  芯片行业相关知识.md
js/: eNodejs.md  jsBase.md  jsTable.md  jsvascript版本.md  (+3 more)
tools/cmake/cmake/snippets/ctest/: CMakeLists.txt  test.cpp
windows/cmd/code/starts/py/fileEdit/pathReplaceWords3/my_ladrc_bak/: CMakeLists.txt
windows/cmd/code/starts/py/fileEdit/pathReplaceWords3/my_ladrc_bak/src/: zal_linear_adrc.cpp
(+3750 files in other folders)
